common/force-app/main/default/objects/Investment_Maturity__c/Investment_Maturity__c.object-meta.xml
<CustomObject>
    <label>Investment Maturity</label>
    <nameField>
        <displayFormat>IM-{0000000}</displayFormat>
        <label>Investment Maturity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Maturities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>