common/force-app/main/default/objects/Investment_Maturity__c/fields/New_Extension_Term_Expiry__c.field-meta.xml
<CustomField>
    <fullName>New_Extension_Term_Expiry__c</fullName>
    <inlineHelpText>Please only enter the number of months</inlineHelpText>
    <label>New Extension Term/Expiry in Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>