common/force-app/main/default/objects/Investment_Maturity__c/fields/New_Investment_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Investment_Maturity_Date__c</fullName>
    <label>New - Investment Maturity Date</label>
    <type>Date</type>
</CustomField>