common/force-app/main/default/objects/Investment_Maturity__c/fields/Old_Investment_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Investment_Maturity_Date__c</fullName>
    <label>Old - Investment Maturity Date</label>
    <type>Date</type>
</CustomField>