common/force-app/main/default/objects/Investment_Maturity__c/recordTypes/Detail_Page.recordType-meta.xml
<RecordType>
    <fullName>Detail_Page</fullName>
    <active>true</active>
    <description>This record type utilised to show field on the detailed page</description>
    <label>Detail Page</label>
</RecordType>