common/force-app/main/default/objects/Investment_Maturity__c/recordTypes/Edit_Page.recordType-meta.xml
<RecordType>
    <fullName>Edit_Page</fullName>
    <active>true</active>
    <description>this record type is utilised to hide fields on edit page</description>
    <label>Edit Page</label>
</RecordType>